--- a/src/app/views/scss/play.scss
+++ b/src/app/views/scss/play.scss
@@ -30,6 +30,7 @@
   font-size: 45px;
   padding-top: 10px;
   text-align: center;
+  z-index: 10;
 }
 
 .progressBar__percentage {
